--- a/styles.css
+++ b/styles.css
@@ -64,10 +64,12 @@ button:hover {
   /* border: 1px solid gray; */
   background-color: rgba(255, 255, 255, 0.219);
   position: relative;
+  transition-duration: 200ms;
 }
 
 .day:hover {
   cursor: pointer;
+  transform: scale(1.05);
 }
 
 .not-month {
@@ -78,10 +80,41 @@ button:hover {
   cursor: not-allowed;
 }
 
-.img-of-the-day {
+.date-overlay {
   position: absolute;
+  z-index: 2;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.089);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  transition-duration: 200ms;
+}
+
+.date-overlay .date-txt {
+  color: white;
+  font-size: 45px;
+  font-family: monospace;
+  opacity: 0.5;
+}
+
+.no-img-txt {
+  color: white;
+  font-size: 12px;
+  opacity: 0.5;
+}
+
+.img-of-the-day {
   height: 100%;
   width: 100%;
   left: 0;
   text-align: center;
+  z-index: 1;
+}
+
+.day:hover .date-overlay {
+  opacity: 0;
 }
