modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -222,8 +222,9 @@ a {
 }
 
 footer {
-  /* position: absolute; */
-  /* bottom: 20px; */
+  position: absolute;
+  bottom: 5px;
+  left: 45%;
 
   font-size: 16px;
   text-align: center;
