--- a/styles.css
+++ b/styles.css
@@ -222,9 +222,7 @@ a {
 }
 
 footer {
-  position: absolute;
-  bottom: 5px;
-  left: 45%;
+  /* left: 45%; */
 
   font-size: 16px;
   text-align: center;
