modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ button:hover {
   height: 100%;
   width: 100%;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.089);
+  background-color: rgba(73, 73, 73, 0.3);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -102,7 +102,7 @@ button:hover {
   color: white;
   font-size: 45px;
   font-family: monospace;
-  opacity: 0.5;
+  opacity: 0.8;
 }
 
 .no-img-txt {
@@ -117,6 +117,7 @@ button:hover {
   left: 0;
   text-align: center;
   z-index: 1;
+  object-fit: cover;
 }
 
 .day:hover .date-overlay {
